Update TokenGeneratorService.java